# digital-twin

./: .env.example  .gitignore  README-mise.md  README.md  docker-compose.yml  mise.toml
backend/: .dockerignore  .infisical.json  Dockerfile  context.py  deploy.py  me.txt  pyproject.toml  requirements.txt  resources.py  server.py
backend/cache/: __init__.py  redis_config.py  semantic_cache.py  utils.py
backend/data/: facts.json  projects.json  summary.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: twin.tsx
frontend/src/components/ai-elements/: response.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx
terraform/: main.tf  versions.tf
