[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.56",
    "fastapi>=0.119.1",
    "google-genai>=1.45.0",
    "langchain-google-genai>=3.0.0",
    "mangum>=0.19.0",
    "pypdf>=6.12.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "uvicorn>=0.38.0",
]
